--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,18 @@ logging.level.root=info
 # Custom
 board.notice.name=NOTICE
 board.qna.name=QNA
+
+# File Upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+
+# \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+app.upload.board.notice=D:/upload/notice/
+app.upload.board.qna=D:/upload/qna/
+
+# \uD30C\uC77C \uC694\uCCAD url
+app.url.path=/files/**
+
+# \uD30C\uC77C \uC694\uCCAD\uC2DC \uB9E4\uD551 \uACBD\uB85C
+app.upload.base=file:///D:/upload/
