--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
 # \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C
+app.upload.basePath=D:/upload/
 app.upload.board.notice=D:/upload/notice/
 app.upload.board.qna=D:/upload/qna/
 
